...
        android:layout_marginRight="171dp"
        android:ems="10"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/heightTextView" />

    <Button
        android:id="@+id/countButton"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="162dp"
...
        app:layout_constraintEnd_toStartOf="@+id/heightEditText"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/massEditText" />

    <TextView
        android:id="@+id/massTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="26dp"
        android:layout_marginLeft="26dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="274dp"
...
